refuse debit if the system amount is negative
