# models/DebitTransaction.js
@@ -3,7 +3,7 @@ const Transaction = require('./Transaction.js')
 module.exports = class DebitTransaction extends Transaction {
 
     constructor({ amount }) {
-        super({ type: 'debit', amount })
+        super({ type: Transaction.types.debit, amount })
     }
 
     static async create({ amount }) {
